# folium-arrow-icon

./: .readthedocs.yaml  CHANGELOG.md  README.md  folium_arrow_icon.py  folium_vector_icon.py  pyproject.toml
.github/workflows/: ci.yaml
doc/source/: conf.py
docs/source/: conf.py  index.ipynb
