[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folium_vector_icon"
authors = [
    { name = "Kentaro Tatsumi", email = "paqira.2019@gmail.com" },
]
description = "Simple Vector (Arrow) Icon for folium"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "folium",
    "icon",
    "vector field",
    "quiver"
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "sphinx>=7.2",
    "myst_nb>=1.0",
    "sphinx_rtd_theme>=1.3"
]

[tool.setuptools.dynamic]
version = { attr = "folium_vector_icon.__version__" }

[project.urls]
"Repository" = "https://github.com/paqira/folium_vector_icon"

[tool.black]
line-length = 100

[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "B",
    "D",
]
ignore = [
    "N999",
    "D415",
    "D105",
    "D104",
    "D107",
]
line-length = 100

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]


